<resources>
    <string name="app_name">Unit Converter</string>
    <string name="chooseConvertor">Choose</string>
    <string name="unit_converter_title">Unit Converter</string>
    <string name="done">done</string>
    <string name="add_row">add row</string>
    <string name="name">Name:</string>
    <string name="new_converter">New converter</string>
    <string name="double_hint">0.0</string>
    <string name="unit">unit</string>
    <string name="delete_row">delete row</string>
    <string name="enter_name">enter name</string>
    <string name="add_new_converter">add new fragment</string>
    <string name="remove_converter">remove converter</string>

    <string name="length">length</string>
    <string name="m">m</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="dm">dm</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="yd">yd</string>
    <string name="ft">ft</string>
    <string name="in">in</string>

    <string name="weight">weight</string>
    <string name="g">g</string>
    <string name="μg">μg</string>
    <string name="mg">mg</string>
    <string name="kg">kg</string>
    <string name="cen">cen</string>
    <string name="ton">ton</string>
    <string name="lb">lb</string>
    <string name="oz">oz</string>

    <string name="volume">volume</string>
    <string name="m3">m³</string>
    <string name="mL">mL</string>
    <string name="L">L</string>
    <string name="pt">pt</string>
    <string name="kw">kw</string>
    <string name="gal">gal</string>
    <string name="ft3">ft³</string>
    <string name="in3">in³</string>

    <string name="empty_field_error_message" >This field cannot be empty</string>
    <string name="confirm">Confirm</string>
    <string name="remove_converter_confirm_message">Are you sure you want to remove the converter?</string>
</resources>
