<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/double_hint"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editUnit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.60"
        android:autofillHints="" />
    />

    <EditText
        android:id="@+id/editUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/removeRowButton"
        app:layout_constraintEnd_toStartOf="@+id/removeRowButton"
        app:layout_constraintStart_toEndOf="@+id/editNumber"
        app:layout_constraintTop_toTopOf="@+id/removeRowButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15"
        android:autofillHints=""
        android:inputType="text" />
    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/removeRowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNumber"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.10"
        android:contentDescription="@string/delete_row"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
